--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,5 +1,5 @@
 $dark-color:#1C212D;
-$alt-dakr-color:#363B44;
+$alt-dark-color:#363B44;
 $light-color:#00B3B8;
 $alt-light-color:#EFEFEF;
 $emphasis-color : #308D45;
