--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,21 @@
 @import "./colors";
+@import "./normalize";
+@import "./container";
+
+
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+}
+ul{
+    list-style: none;
+}
+a{
+    text-decoration: none;
+    
 }
 
 body{
@@ -11,6 +23,8 @@ body{
     color: $alt-light-color;
 }
 
-span{
-    color: $emphasis-color;
-}
+// Header
+@import "./Header/header";
+
+// Landing
+@import "./Landing/landing";
