--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,8 @@
 @import "./colors";
 @import "./normalize";
 @import "./container";
+@import "./main-heading";
+@import "./animations";
 
 
 
@@ -9,6 +11,9 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+}
+html{
+    scroll-behavior: smooth;
 }
 ul{
     list-style: none;
