--- a/styles/main.css
+++ b/styles/main.css
@@ -339,9 +339,6 @@ template {
   font-size: 5rem;
   transition: color 0.3s linear;
 }
-.main-heading:hover {
-  color: #EFEFEF;
-}
 
 @-webkit-keyframes up_down {
   0% {
@@ -532,4 +529,66 @@ header .container nav ul li a {
 .landing .container .img-profile {
   max-width: 500px;
   filter: drop-shadow(0px 5px 35px #1C212D);
+}
+
+.about {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.about:hover .main-heading {
+  color: #EFEFEF;
+}
+.about .container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.about .container img {
+  max-width: 400px;
+  border-radius: 35% 65% 65% 35%/30% 52% 48% 70%;
+}
+.about .container .text {
+  padding: 40px;
+  position: relative;
+}
+.about .container .text::before {
+  content: "Who?";
+  color: #363B44;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  font-size: 10rem;
+  font-weight: bold;
+  opacity: 0.2;
+}
+.about .container .text h3 {
+  font-size: 2rem;
+  margin: 10px 0;
+  text-transform: capitalize;
+}
+.about .container .text p {
+  line-height: 1.7;
+  color: #00B3B8;
+  margin: 10px 0;
+  max-width: 500px;
+}
+.about .container .text p:last-of-type {
+  color: #308D45;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.about .container .text .media {
+  display: flex;
+  margin-bottom: 10px;
+}
+.about .container .text .media li {
+  margin-right: 15px;
+}
+.about .container .text .media li a {
+  font-size: 1.7rem;
+  color: #00B3B8;
+  transition: color 0.4s linear;
+}
+.about .container .text .media li a:hover {
+  color: #EFEFEF;
 }/*# sourceMappingURL=main.css.map */
