--- a/styles/About/_about.scss
+++ b/styles/About/_about.scss
@@ -6,6 +6,7 @@
     }
     .container{
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         img{
             max-width: 400px;
@@ -15,10 +16,10 @@
             padding: 40px;
             position: relative;
             &::before{
-                content: "Who?";
+                content: "??";
                 color: $alt-dark-color;
                 position: absolute;
-                bottom: 0;
+                top: 0;
                 right: 0;
                 z-index: -1;
                 font-size: 10rem;
