--- a/styles/Skills/_skills.scss
+++ b/styles/Skills/_skills.scss
@@ -24,6 +24,11 @@
             position: relative;
             counter-increment: skills;
             z-index: 1;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+            transition: 0.3s linear;
+            &:hover{
+                transform: translateY(-10px);
+            }
             &:hover::before{
                 width: 100%;
             }
