--- a/styles/main.css
+++ b/styles/main.css
@@ -363,6 +363,23 @@ template {
     transform: translateY(20%);
   }
 }
+.more {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #363B44;
+  padding: 15px 35px;
+  display: block;
+  margin: 20px auto;
+  color: #EFEFEF;
+  border-radius: 3px;
+  transition: 0.4s linear;
+}
+.more:hover {
+  background-color: #308D45;
+  color: #EFEFEF;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -454,15 +471,15 @@ header .container nav ul li a {
 }
 .landing::before {
   content: "";
-  width: 780px;
+  width: 571px;
   position: absolute;
   height: 100%;
   background-color: #363B44;
   top: 0;
-  right: 0;
+  right: -202px;
   z-index: -1;
   opacity: 0.5;
-  transform: skewY(-60deg);
+  transform: skewX(-11deg);
 }
 .landing::after {
   content: "</>";
@@ -621,6 +638,11 @@ header .container nav ul li a {
   position: relative;
   counter-increment: skills;
   z-index: 1;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  transition: 0.3s linear;
+}
+.skills .container .box:hover {
+  transform: translateY(-10px);
 }
 .skills .container .box:hover::before {
   width: 100%;
@@ -657,4 +679,28 @@ header .container nav ul li a {
 }
 .skills .container .box ul li {
   font-size: 4rem;
+}
+
+.projects {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.projects:hover .main-heading {
+  color: #EFEFEF;
+}
+.projects .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 30px;
+}
+.projects .container .box {
+  border-radius: 6px;
+  overflow: hidden;
+  position: relative;
+}
+.projects .container .box img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=main.css.map */
