--- a/styles/Landing/_landing.scss
+++ b/styles/Landing/_landing.scss
@@ -1,6 +1,8 @@
 .landing{
     position: relative;
     overflow: hidden;
+    border-bottom: 1px solid $alt-dark-color;
+
 
     &::before{
         content: "";
