--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -1,4 +1,4 @@
- .more{
+ .main-btn{
                 width: fit-content;
                 background-color: $alt-dark-color;
                 padding: 15px 35px;
