--- a/styles/Skills/_skills.scss
+++ b/styles/Skills/_skills.scss
@@ -1,6 +1,8 @@
 .skills{
     padding-top: 80px;
     padding-bottom: 80px;
+    border-top: 1px solid $alt-dark-color;
+
     &:hover .main-heading{
         color: $alt-light-color;
     }
