creating pages and fixes main button

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -1,6 +1,6 @@
  .main-btn{
                 width: fit-content;
-                background-color: $alt-dark-color;
+                background-color: $emphasis-color;
                 padding: 15px 35px;
                 display: block;
                 margin: 20px auto;
