--- a/styles/Skills/_skills.scss
+++ b/styles/Skills/_skills.scss
@@ -19,7 +19,7 @@
         gap: 30px;
         
         .box{
-            padding: 30px;
+            padding: 30px 0 0;
             background-color: $alt-dark-color;
             text-align: center;
             border-radius: 5px;
@@ -69,6 +69,20 @@
                 justify-content: space-evenly;
                 li{
                     font-size: 4rem;
+                }
+            }
+            .details{
+                color: $alt-light-color;
+                display: flex;
+                justify-content: flex-end;
+                padding: 20px;
+                background: $emphasis-color;
+                width: 100%;
+                margin-top: 20px;
+                font-weight: 500;
+                &:hover{
+                    text-decoration: underline;
+                    
                 }
             }
         }
