--- a/styles/Header/_header.scss
+++ b/styles/Header/_header.scss
@@ -48,9 +48,9 @@ header{
                         width: 0%;
                         height: 2px;
                         position: absolute;
-                        top: 0;
+                        bottom: 0;
                         left: 0;
-                        background-color: $alt-light-color;
+                        background-color: $emphasis-color;
                         transition: 0.3s linear;
                     }
                     a{
