--- a/styles/Contact/_contact.scss
+++ b/styles/Contact/_contact.scss
@@ -34,7 +34,7 @@
                     width: 80px;
                     height: 4px;
                     border-radius: 4px;
-                    background-color: $alt-light-color;
+                    background-color: $emphasis-color;
                 }
             }
             p{
@@ -53,6 +53,7 @@
                     i{
                         font-size: 1.5rem;
                         margin-right: 10px;
+                        color: $emphasis-color;
                         
                     }
                 }
