--- a/styles/Header/_header.scss
+++ b/styles/Header/_header.scss
@@ -1,5 +1,5 @@
 header{
-    border-bottom: 1px solid $alt-dark-color;
+    background-color: $alt-dark-color;
     .container{
         display: flex;
         justify-content: space-between;
