--- a/styles/main.css
+++ b/styles/main.css
@@ -442,7 +442,7 @@ header .container nav ul li {
   height: 100%;
 }
 header .container nav ul li:hover {
-  background-color: #363B44;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 header .container nav ul li:hover a, header .container nav ul li:hover i {
   color: #EFEFEF;
